# verynoha

./: Cargo.toml  run_server.bat
common/: Cargo.toml
common/src/: lib.rs
db/: users.txt
server/: Cargo.toml
server/src/: db.rs  main.rs
src/: client.rs  login.rs  main.rs  options.rs
termui/: Cargo.toml
termui/src/: lib.rs
