workspace = { members = [ "common", "server","termui"] }
[package]
name = "verynoha"
version = "0.1.0"
edition = "2021"

[dependencies]
termui = { path = "termui" }
serde = { version = "*", features = ["derive"]}
serde_json = "*"
tokio = { version = "1", features = ["full"] }
common = { path = "common" }