[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.9.1"
axum = { version = "0.7.4", features = ["ws"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
